# k_SRME

./: .gitignore  .pre-commit-config.yaml  README.md  legacy_setup.py  pyproject.toml
data/: convert_ph3params_extxyz.py  generate_DFT_kappa.py  join_dft_kappas.py  mp_id-phonondb_id.txt  phononDB-PBE-structures.extxyz
k_srme/: __init__.py  benchmark.py  conductivity.py  data.py  phono3py_utils.py  relax.py  utils.py
models/CHGNet/: 1_test_rmse.py  1_test_srme.py  2_evaluate.py  metrics.txt
models/GRACE-1L-OAM/: 1_test_srme.py  2_evaluate.py  metrics.txt  run_eval_parallel.sh
models/GRACE-2L-OAM/: 1_test_srme.py  2_evaluate.py  metrics.txt
models/GRACE-2L-r6-11Nov2024/: 1_test_srme.py  2_evaluate.py  metrics.txt  run_eval_parallel.sh
models/M3GNet/: 1_test_rmse.py  1_test_srme.py  2_evaluate.py  metrics.txt
models/MACE-L/: 1_test_rmse.py  2_evaluate.py  metrics.txt
models/MACE-L2/: 1_test_rmse.py  1_test_srme.py  metrics.txt
models/MACE-M/: 1_test_rmse.py  1_test_srme.py  2_evaluate.py  metrics.txt
models/MACE-MPA-0/: 1_test_srme.py  2_evaluate.py  metrics.txt
models/MACE-agnesi-medium/: 1_test_rmse.py  1_test_srme.py  2_evaluate.py  metrics.txt
models/MatterSim-V1/: 1_test_srme.py  2_evaluate.py  metrics-MatterSim-1M.txt  metrics-MatterSim-5M.txt
models/MatterSim-v1.0.0-1M/: 1_test_srme.py  2_evaluate.py  metrics.txt
models/MatterSim-v1.0.0-5M/: 1_test_srme.py  metrics.txt
models/ORBv2/: 1_test_rmse.py  2_evaluate.py  (+1 more)
models/ORBv2-MPTraj/: 1_test_rmse.py  2_evaluate.py  metrics.txt
scripts/: 1_test_rmse.py  1_test_srme.py  2_evaluate.py
(+26 files in other folders)
